Document Stage B Arrow IPC honestly in the manual and pitch notes.
Replace zero-copy claims with Stage A copy vs Stage B path-only IPC, and point readers at the B1/B2 APIs.

Co-authored-by: Cursor <cursoragent@cursor.com>